# apricot

./: .gitignore  .markdownlint.json  Dockerfile  LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: lint.yaml  publish_docker.yaml  publish_pypi.yaml
apricot/: __about__.py  __init__.py  apricot_server.py  ldap_lookup_tree.py  ldap_server_factory.py  oauth_clients.py  oauth_lookup_tree.py  proxied_ldap_entry.py  types.py
apricot/cache/: __init__.py  local_cache.py  redis_cache.py  uid_cache.py
apricot/ldap/: __init__.py  oauth_ldap_entry.py  oauth_ldap_server_factory.py  oauth_ldap_tree.py  read_only_ldap_server.py
apricot/ldap_tree/: __init__.py  microsoft_entra_ldap_tree.py  oauth_ldap_tree.py
apricot/models/: __init__.py  ldap_attribute_adaptor.py  ldap_group_of_names.py  ldap_inetorgperson.py  ldap_inetuser.py  ldap_oauthuser.py  ldap_object_class.py  ldap_organizational_person.py  ldap_person.py  ldap_posix_account.py  ldap_posix_group.py  named_ldap_class.py  overlay_memberof.py  overlay_oauthentry.py
apricot/oauth/: __init__.py  enums.py  keycloak_client.py  microsoft_entra_client.py  oauth_client.py  oauth_client_adaptor.py  oauth_data_adaptor.py  types.py
apricot/oauth_clients/: __init__.py  microsoft_entra_client.py  oauth_client.py  types.py
apricot/patches/: __init__.py  ldap_string.py
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
